--- a/autoProcess.ini
+++ b/autoProcess.ini
@@ -33,8 +33,8 @@ output_format = mp4
 delete_original = True
 relocate_moov = True
 video-codec = h264,x264
-video-bitrate =
-video-crf =
+video-bitrate = 5000
+video-crf = 22
 video-max-width =
 video-profile =
 h264-max-level =
