--- a/autoProcess.ini
+++ b/autoProcess.ini
@@ -53,9 +53,9 @@ audio-channel-bitrate =
 audio-filter =
 audio-copy-original = False
 audio-first-track-of-language = False
-subtitle-codec = mov_text
-subtitle-language =
-subtitle-default-language =
+subtitle-codec = mov_text,srt
+subtitle-language = eng
+subtitle-default-language = eng
 subtitle-encoding =
 fullpathguess = True
 convert-mp4 = False
@@ -63,8 +63,8 @@ tagfile = True
 tag-language = en
 download-artwork = Poster
 download-subs = False
-embed-subs = False
-embed-only-internal-subs = False
+embed-subs = True
+embed-only-internal-subs = True
 sub-providers = addic7ed,podnapisi,thesubdb,opensubtitles
 permissions = 0777
 post-process = False
