--- a/autoProcess.ini
+++ b/autoProcess.ini
@@ -25,6 +25,8 @@ apikey =
 ffmpeg = /usr/bin/ffmpeg
 ffprobe = /usr/bin/ffprobe
 threads = 0
+hwaccels = dxva2, cuvid, qsv, d3d11va
+hwaccel-decoders = h264_cuvid, mjpeg_cuvid, mpeg1_cuvid, mpeg2_cuvid, mpeg4_cuvid, vc1_cuvid, hevc_qsv, h264_qsv
 output_directory =
 copy_to =
 move_to =
